# cosmic-ext-applet-vitals

./: CHANGELOG.md  Cargo.toml  README.de.md  README.md  install.sh  justfile
debian/: changelog  control  copyright  rules
resources/: app.desktop  app.metainfo.xml  cosmic-ext-applet-vitals.1
src/: app.rs  config.rs  hw.rs  main.rs
src/metrics/: gpu.rs  mod.rs
